# medgpt-api

./: .env  .env-example  .gitignore  Makefile  README.md  pyproject.toml  rag.0.1.oas.yml  rag.0.2.oas.yml
alembic/: env.py
alembic/versions/: c39f84ff9c53_.py  f311da5a3bd9_.py
docker/: Dockerfile  docker-compose-dev.yml
src/: database.py  main.py  settings.py
src/auth/: dependencies.py  router.py
src/auth/schemas/: user.py
src/auth/utils/: jwt_helpers.py
src/chat/: chat_client.py  message_repository.py  models.py  router.py  schemas.py
src/common/: http_client.py  logger.py
src/common/auth/: dependencies.py  exceptions.py  router.py  utils.py
src/common/auth/models/: auth_credentials.py  refresh_token.py  token.py  user.py
src/common/auth/repositories/: auth_credentials_repository.py  (+3 more)
src/google_auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/google_auth/models/: oidc_models.py  oidc_repositories.py
src/google_auth/schemas/: oidc_user.py  token.py
src/google_auth/services/: oidc_service.py
src/google_auth/utils/: id_provider_certs.py  id_token_validation.py  requests.py  security_handler.py  sequrity_requests.py  state_storage.py
src/native_auth/: dependencies.py  exceptions.py  router.py
src/native_auth/schemas/: token.py  user.py
src/native_auth/utils/: jwt_helpers.py
src/users/: router.py
src/users/models/: models.py  native_user.py
src/users/repositories/: native_user_repository.py
src/users/schemas/: naitve_user_schemas.py  schemas.py
src/users/services/: native_user_service.py
(+4 files in other folders)
